bk_ida/gccida/g1/ggc_collect
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1888:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *j; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1892:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v6; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1893:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v7; // r12 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1895:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *m; // rbx 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1896:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v10; // r15 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1900:1: error: unknown type name 'page_entry_0'; did you mean 'page_entry'?
page_entry_0 *v14; // [rsp+0h] [rbp-40h] 
^~~~~~~~~~~~
page_entry
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:249:3: note: 'page_entry' declared here
} page_entry;
  ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:1914:15: error: use of undeclared identifier 'TV_GC_0'
timevar_push( TV_GC_0); 
              ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/ggc-page.c:2013:14: error: use of undeclared identifier 'TV_GC_0'
timevar_pop( TV_GC_0); 
             ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/ggc_collect/src/obj/ggc-page.o] Error 1
